# ai-mock-interview

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  resume_review.docx
app/: config.py  main.py  security.py
app/agents/: __init__.py  evaluator.py  graph.py  interviewer.py  jd_analyst.py  parallel_prep.py  question_planner.py  resume_analyst.py  state.py
app/api/: auth.py  interview_rest.py  interview_ws.py  router.py
app/cache/: __init__.py  locks.py  rate_limiter.py  redis_client.py  session_cache.py  websocket_presence.py
app/llm/: client.py  prompts.py
app/memory/: __init__.py  models.py  pgvector_store.py  postgres_store.py  (+3 more)
docs/: architecture.md  course_agent_project_report.md  fastapi_websocket_contract.md  postgres_checkpoint.md  project_showcase_summary.md  rag_design.md  rag_eval_report.md  ragas_evaluation_upgrade.md  redis_design.md  scoring_rubric.md
frontend/: charts.py  export.py  gradio_app.py
scripts/: compare_ragas_results.py  evaluate.py  evaluate_rag_variants.py  evaluate_ragas.py  evaluate_retrieval.py  init_vector_store.py  inspect_memory.py  run_interview_cli.py  run_ragas_experiments.py  test_retrieval.py  test_vision.py  test_ws_client.py
tests/: test_auth_api.py  test_checkpoint_config.py  test_interview_api_contract.py  test_memory_service.py  test_redis_runtime.py  test_resume_pipeline.py  test_session_persistence.py
web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
(+64 files in other folders)
