[project]
name = "ai-mock-interview"
version = "0.1.0"
description = "Multi-Agent powered AI mock interview system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "gradio>=5.0.0",
    "pdfplumber>=0.11.0",
    "ragas>=0.2.0",
    "datasets>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
